@@ -1,3 +1,8 @@
+2011-07-24  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* include/bits/hashtable_policy.h (_Prime_rehash_policy::_M_next_bkt,
+	_M_bkt_for_elements, _M_need_rehash): Fix typos in the last commit.
+
 2011-07-24  François Dumont  <francois.cppdevs@free.fr>
 
 	* include/bits/hashtable_policy.h (_Prime_rehash_policy): Use
